Made the user box align correctly, let's go.

--- a/Prototype/WhiteBoxCapsule/src/assets/css/style.css
+++ b/Prototype/WhiteBoxCapsule/src/assets/css/style.css
@@ -226,7 +226,7 @@ button.menu-button {
 }
 
 .player-bar-box {
-  width: 95%;
+  width: 95.5%;
   height: 100px;
   border: 1px solid #cdcdcd;
 }
